# MailerLiteWrapper

./: README.md  pyproject.toml
mailerlite_wrapper/: wrapper.py
